--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 
 body
 {
-    background-color: white;
-    color: black; 
+    background-color: #FAE5D3;
+    color: maroon; 
 }
 
 .en-tête {
@@ -24,14 +24,18 @@ body
     color: maroon;
     margin-right: 1px;   
     text-decoration: none;
-    border-width: 1px;
- 	border-style: outset;
- 	border-color: black;
 }
-
+    
 .sous-titre {
 	font: Cambria;
 	color: green;
+}
+
+.paragraphe {
+    background-color: white;
+    border-width: 0px;
+    border-style: outset;
+    border-color: black;
 }
 
 .iframe-container {
